--- a/index.html
+++ b/index.html
@@ -1,12 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
-  
-hahahahahahaha
-  ahahahahahahah
-  hahahahaha
-  hahaha
-  HAHAHAHAHA!!!!!
-  
+<html lang="en"> //language is english
+
 <head>
 
   <meta charset="utf-8">
@@ -14,7 +8,7 @@ hahahahahahaha
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Minha's works</title>
+  <title>Creative - Start Bootstrap Theme</title>
 
   <!-- Font Awesome Icons -->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -64,11 +58,11 @@ hahahahahahaha
     <div class="container h-100">
       <div class="row h-100 align-items-center justify-content-center text-center">
         <div class="col-lg-10 align-self-end">
-          <h1 class="text-uppercase text-white font-weight-bold">Better design, better life</h1>
+          <h1 class="text-uppercase text-white font-weight-bold">Your Favorite Source of Free Bootstrap Themes</h1>
           <hr class="divider my-4">
         </div>
         <div class="col-lg-8 align-self-baseline">
-          <p class="text-white-75 font-weight-light mb-5">Hi, I'm a design student in Korea. I'm gonna post my works and some personal interests. Hope to keep using it!</p>
+          <p class="text-white-75 font-weight-light mb-5">Start Bootstrap can help you build better websites using the Bootstrap framework! Just download a theme and start customizing, no strings attached!</p>
           <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
         </div>
       </div>
@@ -80,9 +74,9 @@ hahahahahahaha
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-8 text-center">
-          <h2 class="text-white mt-0">I've got you might like!</h2>
+          <h2 class="text-white mt-0">We've got what you need!</h2>
           <hr class="divider light my-4">
-          <p class="text-white-50 mb-4">Check them yourself!</p>
+          <p class="text-white-50 mb-4">Start Bootstrap has everything you need to get your new website up and running in no time! Choose one of our open source, free to download, and easy to use themes! No strings attached!</p>
           <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
         </div>
       </div>
